# audience_django

./: .gitignore  Makefile  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt  tableau.drawio  test.py
audience_toolkits/: serializers.py  settings.py  urls.py
core/audience/: audience_worker.py  labeler.py
core/dao/: audience_task.py  author_example.py  conn_info.py  input_example.py  model_info.py
core/helpers/: data_helpers.py  db_helper.py  enums_helper.py  file_helper.py  log_helper.py  model_helpers.py  text_helper.py  tokenizers.py
django_review/: settings.py  urls.py
documenting_jobs/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
documenting_jobs/migrations/: 0001_initial.py  0002_documentingjob_task_id.py  0003_auto_20220505_1101.py  0004_auto_20220505_1356.py
home/: apps.py  serializers.py  urls.py  views.py
labeling_jobs/: admin.py  apps.py  forms.py  helpers.py  models.py  serializers.py  tasks.py  urls.py  views.py
labeling_jobs/migrations/: 0001_initial.py  0002_auto_20210316_1453.py  (+61 more)
modeling_jobs/: admin.py  apps.py  forms.py  helpers.py  models.py  serializers.py  task.py  tasks.py  urls.py  views.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
predict_jobs/: apps.py  urls.py  views.py
predicting_jobs/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
templates/: 404.html  base.html  index.html
upload_files/: test_0BMmkb8.csv  test_1ZfQ1Kt.csv  test_21bumz3.csv  test_6ZkY5FT.csv  test_DnXoTca.csv  test_GJGmBmy.csv  新增_Microsoft_Excel_工作表_zSgYk1n.csv
(+181 files in other folders)
