[tool.poetry]
name = "audience_toolkit_django"
version = "1.1.0"
description = ""
authors = ["weifanliao <p988744@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.13"
djangorestframework = "~=3.12.4"
djangorestframework-datatables = "^0.6.0"
django-filter = "^21.1"
django-environ = "^0.8.1"
PyMySQL = "~=1.0.2"
retry = "^0.9.2"
bson = "^0.5.10"
jieba = "^0.42.1"
joblib = "^1.1.0"
django-q = "^1.3.9"
cchardet = "^2.1.7"
sklearn = "^0.0"
pandas = "^1.3.4"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
